--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "readme-express",
   "version": "0.1.0",
   "private": true,
+  "author": "Shuhua Liu",
+  "description": "An easy-to-use README generator",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -21,5 +24,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0"
   }
 }
