--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
