--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-simplemde-editor": "^5.2.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
