--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "react-select": "^5.7.4",
     "react-simplemde-editor": "^5.2.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
