--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
     "react-simplemde-editor": "^5.2.0",
     "rehype-raw": "^6.1.1",
